--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,10 @@ a:hover {
   display: inline-block;
   transform: rotate(180deg);
 }
+
+button {
+  background-color: #b571fd;
+  font-size: 12px;
+  color: #f0e1ff;
+  border-radius: 3px;
+}
