--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,9 @@
-@import url(https://fonts.bunny.net/css?family=chivo:700|manrope:400,500,700,800|shippori-mincho:700,800);
-
+@font-face {
+  font-family: "UIcons";
+  src: url("../fonts/uicons/uicons-regular-rounded.woff2") format("woff2"), url("../fonts/uicons/uicons-regular-straight.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
 html,
 body,
 header,
